--- a/contact.html
+++ b/contact.html
@@ -58,10 +58,12 @@
 							<fieldset>
 								<label>name:&nbsp;</label> <input type="text" name="name" size="25" required> <br>
 								<label>e-mail:&nbsp;</label> <input type="text" name="email" size="25" required>	<br>
+							</fieldset>
+							<fieldset>
 								<span>Get updates from sponsors?</span>	<br>
 								<label for="sponsor">yes </label><input type="radio" value ="yes" name="sponsor" required><label for="sponsor"> no </label> <input type="radio" value ="no" name="sponsor">	<br>
-								<input type="submit">
 							</fieldset>
+							<input type="submit">
 						</form>
 					</div>
 				</div>
