finally fixed it

--- a/tutorial.html
+++ b/tutorial.html
@@ -351,7 +351,7 @@
 					than itself; with enough of these shapes, we have the power to form images more complex than its individual parts. <i><b>Emergence!</b></i></p>
 
 					<div class="center">
-						<canvas id="canvas2" width="640px" height="480px"></canvas>
+						<div class="canvasWrapper"><canvas id="canvas2" width="640px" height="480px"></canvas><div>
 					</div>
 				</div>
 
@@ -425,7 +425,7 @@
 					<!-- Code example -->
 
 					<div class="center">
-						<canvas id="canvas3" width="640px" height="480px"></canvas>
+						<div class="canvasWrapper"><canvas id="canvas3" width="640px" height="480px"></canvas></div>
 					</div>
 
 					<br>
@@ -545,7 +545,7 @@
 					<!-- Code example -->
 
 					<div class="center">
-						<canvas id="canvas4" width="640px" height ="480px"></canvas>
+						<div class="canvasWrapper"><canvas id="canvas4" width="640px" height ="480px"></canvas></div>
 						<br>
 						<br>
 						<button id="buttonLeft" style="width:40px; height:40px">&larr;</button>
@@ -671,7 +671,7 @@
 					<!-- Code example -->
 
 					<div class="center">
-						<canvas id="canvas5" width="640px" height ="480px"></canvas>
+						<div class="canvasWrapper"><canvas id="canvas5" width="640px" height ="480px"></canvas></div>
 						<br>
 						<br>
 						<button id="buttonLeft2" style="width:40px; height:40px">&larr;</button>
