--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
 		<!-- modal image; occupies full screen when grid items are clicked on. consists of media and buttons -->
 		<div id="modal">
 			<span id="imageCounter"></span>
-			<span id="prevImgBtn" class="modalButton"> &#9668; </span>
+			<span id="prevImgBtn" class="modalButton"> &#9664;&#xfe0e; </span>
 			<div id="closeModal"></div>
 			<span id="exitButton" class="modalButton">&times;</span>
 			<div id="modalItems">
@@ -24,7 +24,7 @@
 						<span>Hello</span>
 					</div>
 			</div>
-			<span id="nextImgBtn" class="modalButton"> &#9658; </span>
+			<span id="nextImgBtn" class="modalButton"> &#9654;&#xfe0e; </span>
 		</div>
 
 		<!-- NAVIGATION BAR -->
@@ -34,12 +34,12 @@
 				<h1>	<a href="./index.html">spookycouch <img class="couchLogo specialCouch" src="./assets/spookycouch.png" height="24px" width="24px"></a>	</h1>
 				<!-- hamburger/drop-down menu buttons -->
 				<ul class="menuItem">
-					<li id="tocButton">Filters <span id="arrow">&#9660;</span>	</li>	
-					<li id="hamburger">	&#9776;</li>
+					<li id="tocButton">Filters <span id="arrow">&#9660;&#xfe0e;</span>	</li>	
+					<li id="hamburger">	&#9776;&#xfe0e;</li>
 				</ul>
 				<!-- page navigation -->
 				<ul id="navButtons" class="menuItem">
-					<li class="hamburger2">	<span id="hamburger2">&#9776;</span></li>
+					<li class="hamburger2">	<span id="hamburger2">&#9776;&#xfe0e;</span></li>
 					<li>	<a href="./index.html">Home</a>	</li>
 					<li>	<a href="./about.html">About</a>	</li>	
 					<li class="select">	<a href="./gallery.html">Gallery</a> </li>
@@ -51,7 +51,7 @@
 			</div>
 
 			<!-- Drop-down menu for filters -->
-			<div id="dropToc" style="top:-150px;">
+			<div id="dropToc">
 				<!-- OVERRIDE as inputs are used instead of anchors for this page only -->
 				<style>
 					#dropToc li {
