--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<h2>Dev Blog</h2>
 							<span>behind the scenes @spookycouch</span>
 							<br>
-							<a href="./about.html"><img src="./images/index/dev.jpg"></a>
+							<a href="./about.html"><img src="./images/index/dev.png"></a>
 						</div>				
 					</div>
 
@@ -114,7 +114,7 @@
 				<div class="gridItem">
 					<a href="./about.html"></a>
 					<div class="imageContainer" style="background-image: url(./images/index/self.jpg);">
-						<img src="./images/index/self.jpg">
+						<img src="./images/index/self.png">
 					</div>
 					<div class="textContainer">
 						<h3>About</h3>
@@ -136,7 +136,7 @@
 				<div class="gridItem">
 					<a href="https://www.etsy.com" target="_blank"></a>
 					<div class="imageContainer">
-						<img src="./images/index/merch.jpg">
+						<img src="./images/index/merch.png">
 					</div>
 					<div class="textContainer">
 						<h3>Store</h3>
