--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 				<div class="gridItem">
 					<a href="./about.html"></a>
-					<div class="imageContainer" style="background-image: url(./images/index/self.jpg);">
+					<div class="imageContainer">
 						<img src="./images/index/self.png">
 					</div>
 					<div class="textContainer">
