--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
 				<!-- TABLE OF CONTENTS START -->
 				<div class="post tableOfContents">
 					<h2>Table of Contents:</h2>
-					<p>&ensp;Development was carried out page-by-page, however I have arranged everything by process for a clearer flow and overview of design choices.
+					<p>&ensp;Development was carried out page-by-page, however I have arranged everything by process for a clearer flow and overview of design choices. The website was published on <a href="https://spookycouch.github.io/selfwebsite.github.io/index.html" target="_blank">GitHub Pages</a> for testing and viewing on mobile.<sup>Last updated 27 May, 1830hrs</sup>
 					</p>
 					<Ul>
 						<li>	<a href="#id1">1.Concept</a>	</li>
