--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 		<title>spookycouch | Contact</title>
 		<link href="./assets/spookycouch.png" rel="shortcut icon" type="image/png">
+		<!-- css -->
 		<link href="./css/navbar.css" type="text/css" rel="stylesheet">
 		<link href="./css/contactStyle.css" type="text/css" rel="stylesheet">
 	</head>
@@ -14,7 +15,7 @@
 		<nav>
 			<div class="navForeground">
 				<!-- logo -->
-				<h1>	<a href="./index.html">spookycouch <img class="couchLogo" src="./assets/spookycouch.png" height="24px" width="24px"></a>	</h1>
+				<h1>	<a href="./index.html">spookycouch <img class="couchLogo" src="./assets/spookycouch.png" height="24px" width="24px" alt="logo"></a>	</h1>
 				<!-- hamburger menu button -->
 				<ul class="menuItem">
 					<li id="hamburger">	&#9776;</li>
@@ -37,9 +38,11 @@
 		<main>
 			<div class="foreground">
 
+
 				<!-- SOCIAL MEDIA BOX -->
 				<div class="contentBox cb1">
 					<h3>Social media:</h3>
+					<!-- links to social media -->
 					<div class="findSocial">
 						<ul>
 							<li><a href="https://www.facebook.com/bellerbyscollege/" target="_blank"><img src="./assets/facebook.png" alt="facebook"></a></li>
@@ -49,11 +52,13 @@
 					</div>
 				</div>
 				
+
 				<!-- MAILING LIST BOX -->
 				<div class="contentBox cb2">
 					<h3>Join our mailing list:</h3>
 					<div class="mailList">
 						<!-- post is used instead of get as name and email is relatively sensitive information -->
+						<!-- form to subscribe to mailing list -->
 						<form action="./contact.html" method="post">
 							<fieldset>
 								<label>name:&nbsp;</label> <input type="text" name="name" size="25" required> <br>
@@ -68,11 +73,14 @@
 					</div>
 				</div>
 
+
 				<!-- GOOGLE MAP & CONTACT DETAILS BOX -->
 				<div class="contentBox cb3">
 					<h3>Find us here:</h3>
+					<!-- google map -->
 					<div class="mapBox">
 						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.749322201199!2d103.88873941471556!3d1.3263533620200596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da178aaa046bcb%3A0x31a7acaff9c4ac43!2sGeylang+Neighbourhood+Police+Centre!5e0!3m2!1sen!2suk!4v1526388512567" width="600" height="450" frameborder="0" style="border:0" allowfullscreen id="googleMap"></iframe>
+						<!-- contact details -->
 						<ul>
 							<li>	hp:	<a href="tel:01273339200">01273339200</a>	</li>
 							<li>	email: <a href="mailto:2381289@student.bellerbys.com?&subject=Contact&nbsp;Us&nbsp;|&nbsp;spookycouch&body=Hi spookycouch,">2381289@student.bellerbys.com</a></li>
@@ -80,15 +88,18 @@
 					</div>
 				</div>
 
+
 			</div>
 		</main>
 		<!-- END OF MAIN CONTENT -->
-
+		
+		<!-- FOOTER -->
 		<footer>
 			<div class="left"><a href="https://www.bellerbys.com/find-your-course/foundation/foundation-computing" target="_blank">Bellerbys Computing Foundation</a></div>
 			<div class="middle"><span>Created by Joe Jeffcock 2018</span></div>
 			<div class="right"><span>Social Media: </span></div>
 			<div class="socialMedia">
+				<!-- links to social media -->
 				<ul>
 					<li><a href="https://www.facebook.com/bellerbyscollege/" target="_blank"><img src="./assets/facebook.png" alt="facebook"></a></li>
 					<li><a href="https://www.instagram.com/bellerbys_college" target="_blank"><img src="./assets/instagram.png" alt="instagram"></a></li>
