--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<h2>Portfolio</h2>
 							<span>view my previous works</span>
 							<br>
-							<a href="./gallery.html"><img src="./images/index/ggrass2.png"></a>
+							<a href="./gallery.html"><img src="./images/index/ggrass2.png" alt="Still from Green Grass"></a>
 						</div>				
 					</div>
 
@@ -59,7 +59,7 @@
 							<h2>Java Tutorial</h2>
 							<span>learn game design in java</span>
 							<br>
-							<a href="./tutorial.html"><img src="./images/index/coding.png"></a>
+							<a href="./tutorial.html"><img src="./images/index/coding.png" alt="Tutorial Example"></a>
 						</div>
 					</div>
 
@@ -68,7 +68,7 @@
 							<h2>Dev Blog</h2>
 							<span>behind the scenes @spookycouch</span>
 							<br>
-							<a href="./about.html"><img src="./images/index/dev.png"></a>
+							<a href="./about.html"><img src="./images/index/dev.png" alt="Picture from development"></a>
 						</div>				
 					</div>
 
@@ -77,7 +77,7 @@
 							<h2>Portfolio</h2>
 							<span>view my previous works</span>
 							<br>
-							<a href="./gallery.html"><img src="./images/index/ggrass2.png"></a>
+							<a href="./gallery.html"><img src="./images/index/ggrass2.png" alt="Still from Green Grass"></a>
 						</div>	
 					</div>
 
@@ -93,7 +93,7 @@
 			</div>
 
 			<div class="banner">
-				<img src="./assets/banner.png">
+				<img src="./assets/banner.png"  alt="Website banner">
 				<p>A collection of my work in digital and interactive media</p>
 			</div>
 
@@ -105,7 +105,7 @@
 				<div class="gridItem">
 					<a href="./gallery.html"></a>
 					<div class="imageContainer">
-						<img src="./images/index/child.png">
+						<img src="./images/index/child.png" alt="Drawing of a child">
 					</div>
 					<div class="textContainer">
 						<h3>Gallery</h3>
@@ -117,7 +117,7 @@
 				<div class="gridItem">
 					<a href="./about.html"></a>
 					<div class="imageContainer">
-						<img src="./images/index/self.png">
+						<img src="./images/index/self.png" alt="Picture of me">
 					</div>
 					<div class="textContainer">
 						<h3>About</h3>
@@ -129,7 +129,7 @@
 				<div class="gridItem">
 					<a href="./tutorial.html"></a>
 					<div class="imageContainer">
-						<img src="./images/index/tutorialLink.png">
+						<img src="./images/index/tutorialLink.png" alt="Tutorial Example">
 					</div>
 					<div class="textContainer">
 						<h3>Tutorial</h3>
@@ -141,7 +141,7 @@
 				<div class="gridItem">
 					<a href="https://www.etsy.com" target="_blank"></a>
 					<div class="imageContainer">
-						<img src="./images/index/merch.png">
+						<img src="./images/index/merch.png" alt="Merchandise">
 					</div>
 					<div class="textContainer">
 						<h3>Store</h3>
@@ -153,7 +153,7 @@
 				<div class="gridItem">
 					<a href="./contact.html"></a>
 					<div class="imageContainer">
-						<img src="./images/index/space.png">
+						<img src="./images/index/space.png" alt="Drawing of space">
 					</div>
 					<div class="textContainer">
 						<h3>Contact</h3>
