--- a/tutorial.html
+++ b/tutorial.html
@@ -154,7 +154,7 @@
 							&nbsp;&nbsp;&nbsp;&nbsp;try	<br>
 							&nbsp;&nbsp;&nbsp;&nbsp;{	<br>
 							<div class="keyword">
-							<span class="comment indent3">//Initisalised fileWriter is wrapped in a bufferedWriter. The bufferedWriter then writes the desired text.</span>
+							<span class="comment indent3">//Initisalised fileWriter is wrapped in a bufferedWriter. The bufferedWriter then writes the desired text.</span>	<br>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;fileWriter = new FileWriter(file);<br>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;bufferedWriter = new BufferedWriter(fileWriter); <br>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;bufferedWriter.write(textIn);	<br>
